--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/global.js"></script>
   <script src="js/vvc.js"></script>
   <script src="js/fvc.js"></script>
+  <script src="js/ffiber.js"></script>
   <script>
   console.log(collector);
 
