add new fiber file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="js/vvc.js"></script>
   <script src="js/fvc.js"></script>
   <script src="js/ffiber.js"></script>
+  <script src="js/vfiber.js"></script>
   <script>
   console.log(collector);
 
@@ -97,6 +98,7 @@
   </script>
 </head>
 <body>
+  <p><a href="https://www.cfs.gov.hk/english/programme/programme_rafs/programme_rafs_n_01_04_01_fruit_veg_report.html" target="blank">Reference</a></p>
 </body>
 </html>
 
