add pesticide data

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="js/fvc.js"></script>
   <script src="js/ffiber.js"></script>
   <script src="js/vfiber.js"></script>
+  <script src="js/fpesticide.js"></script>
+  <script src="js/vpesticide.js"></script>
   <script>
   console.log(collector);
 
@@ -98,7 +100,10 @@
   </script>
 </head>
 <body>
-  <p><a href="https://www.cfs.gov.hk/english/programme/programme_rafs/programme_rafs_n_01_04_01_fruit_veg_report.html" target="blank">Reference</a></p>
+  <h2>References:</h2>
+  <p><a href="https://www.cfs.gov.hk/english/programme/programme_rafs/programme_rafs_n_01_04_01_fruit_veg_report.html" target="blank">維他命C & 膳食纖維</a></p>
+  <p><a href="https://tw.appledaily.com/life/20190126/DGLFCEWAPMKX7DLQLMGZXYEEOA/" target="blank">台灣農藥</a></p>
+  <p><a href="https://heho.com.tw/archives/77891" target="blank">美國農藥</a></p>
 </body>
 </html>
 
