add cancer data

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="js/fpesticide.js"></script>
   <script src="js/vpesticide.js"></script>
   <script src="js/uspesticide.js"></script>
+  <script src="js/cancer.js"></script>
   <script>
   console.log(collector);
 
