--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
       var div = createDiv(ele.tag).append(createTable(ele));
       const hr = $("<hr>");
 
-      $('body').append(header);
-      $('body').append(div);
-      $('body').append(hr);
+      $('#tables').append(header);
+      $('#tables').append(div);
+      $('#tables').append(hr);
     });
   }
 
@@ -123,11 +123,34 @@
   </script>
 </head>
 <body>
-  <h2>References:</h2>
-  <p><a href="https://www.cfs.gov.hk/english/programme/programme_rafs/programme_rafs_n_01_04_01_fruit_veg_report.html" target="blank">維他命C & 膳食纖維</a></p>
-  <p><a href="https://tw.appledaily.com/life/20190126/DGLFCEWAPMKX7DLQLMGZXYEEOA/" target="blank">台灣農藥</a></p>
-  <p><a href="https://heho.com.tw/archives/77891" target="blank">美國農藥(中文)</a></p>
-  <p><a href="https://draxe.com/health/dirty-dozen/" target="blank">美國農藥(英文)</a></p>
+  <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav">
+        <h4>Blogger Tables</h4>
+        <ul class="nav nav-pills nav-stacked">
+          <li class="active"><a data-toggle="tab" href="#main">Main Tables</a></li>
+          <li><a data-toggle="tab" href="#jpmap">Japan Map</a></li>
+          <!-- <li><a data-toggle="tab" href="#allKeywords">Show All Keywords</a></li>
+          <li><a data-toggle="tab" href="#charts">Show Charts</a></li> -->
+        </ul>
+      </div>
+      <div class="col-sm-9">
+        <div class="tab-content">
+          <div id="main" class="tab-pane fade in active">
+            <div id="tables"></div>
+            <hr>
+            <h2>References:</h2>
+            <p><a href="https://www.cfs.gov.hk/english/programme/programme_rafs/programme_rafs_n_01_04_01_fruit_veg_report.html" target="blank">維他命C & 膳食纖維</a></p>
+            <p><a href="https://tw.appledaily.com/life/20190126/DGLFCEWAPMKX7DLQLMGZXYEEOA/" target="blank">台灣農藥</a></p>
+            <p><a href="https://heho.com.tw/archives/77891" target="blank">美國農藥(中文)</a></p>
+            <p><a href="https://draxe.com/health/dirty-dozen/" target="blank">美國農藥(英文)</a></p>
+          </div>
+          <div id="jpmap" class="tab-pane fade">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
 
