--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="js/uspesticide.js"></script>
   <script src="js/cancer.js"></script>
   <script src="js/jpmap/sweetPepper.js"></script>
+  <script src="js/jpmap/tomato.js"></script>
   <script>
   // console.log(collector);
   function scale(xMax, xMin, yMax, yMin, yInput) {
