--- a/jp.html
+++ b/jp.html
@@ -25,6 +25,7 @@
   <script src="js/global.js"></script>
   <script src="js/jpmap/sweetPepper.js"></script>
   <script src="js/jpmap/tomato.js"></script>
+  <script src="js/jpmap/onion.js"></script>
   <script>
   var g_barData = null;
 
