add green onion data

--- a/jp.html
+++ b/jp.html
@@ -26,6 +26,7 @@
   <script src="js/jpmap/sweetPepper.js"></script>
   <script src="js/jpmap/tomato.js"></script>
   <script src="js/jpmap/onion.js"></script>
+  <script src="js/jpmap/greenOnion.js"></script>
   <script>
   var g_barData = null;
 
