--- a/jp.html
+++ b/jp.html
@@ -27,6 +27,7 @@
   <script src="js/jpmap/tomato.js"></script>
   <script src="js/jpmap/onion.js"></script>
   <script src="js/jpmap/greenOnion.js"></script>
+  <script src="js/jpmap/eggplant.js"></script>
   <script>
   var g_barData = null;
 
