--- a/show.html
+++ b/show.html
@@ -25,6 +25,13 @@
       mouseY = res["my"][0];
       imgurl = res["address"][0];
       color = res["color"][0];
+
+      console.log(`startX: ${startX}`);
+      console.log(`startY: ${startY}`);
+      console.log(`mouseX: ${mouseX}`);
+      console.log(`mouseY: ${mouseY}`);
+      console.log(`imgurl: ${imgurl}`);
+      console.log(`color: ${color}`);
     }
 
     function drawRect() {
