--- a/show.html
+++ b/show.html
@@ -80,7 +80,11 @@
 
     putParameters2Variables();
     handleUrlImg();
-    drawRect();
+
+    setInterval(function() {
+      console.log("gogogo");
+      drawRect();
+    }, 1000)
   </script>
 </div>
 
