--- a/show.html
+++ b/show.html
@@ -81,10 +81,10 @@
     putParameters2Variables();
     handleUrlImg();
 
-    setInterval(function() {
-      console.log("gogogo");
+    window.setInterval(function() {
+      console.log("gogogo!");
       drawRect();
-    }, 1000)
+    }, 1000);
   </script>
 </div>
 
