--- a/show.html
+++ b/show.html
@@ -83,7 +83,7 @@
     putParameters2Variables();
     handleUrlImg();
 
-    window.setInterval(drawRect, 1000);
+    window.setTimeout(drawRect, 1000);
   </script>
 </div>
 
