--- a/index.html
+++ b/index.html
@@ -89,24 +89,24 @@
     <section class="showcase">
       <div class="container-fluid p-0">
         <div class="row g-0">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-cup.jpg')"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-filming.jpg')"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>客製化產品宣傳影片</h2>
-            <p class="lead mb-0">臻禾興業有限公司(魔力)-大勁除草先生，是一個擁有多年經驗及專業技術的農業機械工具製造商。除了提供高品質魔力電動割草機、花園籬芭剪、挖孔機、割草機、背負式噴霧機、背負式割草機和複合式工具，另外，我們還提供園林綠化設備，如: 鬆土機、高空鍊鋸機和園藝機械零配件。</p>
+            <p class="lead mb-0">以豐富經驗和創意靈感，為品牌形象注入靈魂，讓產品和服務引領潮流，打動消費者。</p>
           </div>
         </div>
         <div class="row g-0">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-bag2.jpg')"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>影片授權</h2>
-            <p class="lead mb-0">影片授權給你</p>
+            <p class="lead mb-0">影片授權，有效推廣政策及活動施行。</p>
           </div>
         </div>
         <div class="row g-0">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-bottle.jpg')"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>置入性行銷</h2>
-            <p class="lead mb-0">幫你行銷</p>
+            <p class="lead mb-0">想要曝光的行銷事物或服務以無聲無息的手法，置入影片中。</p>
           </div>
         </div>
       </div>
